@@ -10,6 +10,9 @@ What's New in Stackless 2.7.XX?
 
 *Release date: 20XX-XX-XX*
 
+- https://bitbucket.org/stackless-dev/stackless/issues/129
+  C-API: Calling PyTasklet_New( NULL, ...) no longer crashes.
+
 - https://bitbucket.org/stackless-dev/stackless/issues/128
   Fix pickling of the module 'stackless'.
 
